@@ -1,44 +1,44 @@
 ---
-product_name:      manageiq
+product_name: manageiq
 repos:
-  ref:             jansa
+  ref: jansa
   manageiq:
-    url:           https://github.com/ManageIQ/manageiq.git
-    ref:
+    url: https://github.com/ManageIQ/manageiq.git
+    ref: 
   manageiq_appliance:
-    url:           https://github.com/ManageIQ/manageiq-appliance.git
-    ref:
+    url: https://github.com/ManageIQ/manageiq-appliance.git
+    ref: 
   manageiq_ui_service:
-    url:           https://github.com/ManageIQ/manageiq-ui-service.git
-    ref:
-version:
-release:
+    url: https://github.com/ManageIQ/manageiq-ui-service.git
+    ref: 
+version: 
+release: 
 rpm:
-  version:         10.1.0
-  release:         0.4
-  repo_name:
-  org_name:        manageiq
+  version: 10.1.0
+  release: 0.5
+  repo_name: 
+  org_name: manageiq
   product_summary: ManageIQ Management Engine
-  product_url:     https://github.com/ManageIQ/manageiq
-  changelog:
-bundler_version:   2.1.4
-npm_registry:
+  product_url: https://github.com/ManageIQ/manageiq
+  changelog: 
+bundler_version: 2.1.4
+npm_registry: 
 rpm_repository:
-  digitalocean_access_token:
+  digitalocean_access_token: 
   s3_api:
-    access_key:
-    secret_key:
+    access_key: 
+    secret_key: 
     bucket: rpm-manageiq-org
     endpoint: nyc3.digitaloceanspaces.com
   :arches:
-    - "src"
-    - "noarch"
-    - "ppc64le"
-    - "x86_64"
+  - src
+  - noarch
+  - ppc64le
+  - x86_64
   :content:
     :10-jansa:
       :targets:
-        - el8
+      - el8
       :rpms:
         :manageiq: !ruby/regexp /.+-10\.\d\.\d-\d(\.\d\.(alpha|beta|rc)\d)?\.el.+/
         :manageiq-release: !ruby/regexp /.+-10\.0.+/
@@ -48,6 +48,6 @@ rpm_repository:
         :wmi: !ruby/regexp /.+-1\.3\.14.+/
     :10-jansa-nightly:
       :targets:
-        - el8
+      - el8
       :rpms:
         :manageiq-nightly: !ruby/regexp /.+-10\.\d\.\d-\d\.\d\.\d+\.el.+/
