@@ -1,4 +1,7 @@
 %changelog
+* Tue Aug 11 2020 ManageIQ <contact@manageiq.org> - 10.1.0-0.5.rc2
+- Jansa 1 Rc2 build
+
 * Fri Jul 24 2020 ManageIQ <contact@manageiq.org> - 10.1.0-0.4.rc1
 - Jansa RC1 build
 
